@@ -1,3 +1,9 @@
+2005-02-26  Sushma Rai  <rsushma@novell.com>
+
+	* lib/e2k-autoconfig.c (validate):
+	* camel/camel-exchange-provider.c (exchange_validate_user_cb): Removed
+	unnecessary memory allocation.
+
 2005-02-26  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* storage/exchange-folder-size.c : Modified most of the code for
